Fix issue with horizontal scrolling

--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,5 +1,5 @@
 @mixin mobile-device() {
-  @media (max-width: 400px) {
+  @media (max-width: 576px) {
     @content;
   }
 }
